--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ a:hover {
   bottom: 0;
   width: 100%;
   z-index: 100000;
-  background: #ffffff url("../img/pageload-spinner.gif") no-repeat center center;
+  background: #ffffff url("img/pageload-spinner.gif") no-repeat center center;
 }
 
 .bloc {
@@ -89,7 +89,7 @@ a:hover {
 }
 
 .texture-paper::before {
-  background: url("../img/texture-paper.png");
+  background: url("img/texture-paper.png");
   background-size: 280px 280px;
 }
 
@@ -807,11 +807,11 @@ h4 {
 }
 
 .bg-banniere {
-  background-image: url("img/la-chouette-agence-banniere.jpg");
+  background-image: url("img/la-chouette-agence-banniere.webp");
 }
 
 .bg-presentation {
-  background-image: url("img/image-de-presentation.jpg");
+  background-image: url("img/image-de-presentation.webp");
 }
 
 @media (max-width: 1024px) {
