--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ a:hover {
 }
 
 .texture-paper::before {
-  background: url("img/image-de-presentation.webp");
+  background: url("img/texture-paper.png");
   background-size: 280px 280px;
 }
 
@@ -811,7 +811,7 @@ h4 {
 }
 
 .bg-presentation {
-  background-image: url("img/image-de-presentation.webp");
+  background-image: url("img/image-de-presentation (1).webp");
 }
 
 @media (max-width: 1024px) {
